topic and title bg color changed

--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@
 .topic {
     font-size: 30px;
     color: white;
-    background: rgb(39 39 236 / 92%);
+    background: #2196F3;
     text-align: center;
     margin-bottom: 50px;
 }
 .title {
     font-size: 20px;
     color: white;
-    background: rgb(39 39 236 / 92%);
+    background: #2196F3;
     text-align: center;
     width: 40%;
     margin: 10px 0;
